[package]
name = "HuggingfaceAPIProxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"